fix: restore jQuery element variable instead of element_id

--- a/share/jupyter/nbconvert/templates/base/base.html.j2
+++ b/share/jupyter/nbconvert/templates/base/base.html.j2
@@ -248,7 +248,7 @@ var element = $('#{{ div_id }}');
 <div id="{{ div_id }}"></div>
 <div class="output_subarea output_widget_view {{ extra_class }}">
 <script type="text/javascript">
-var element_id = '#{{ div_id }}';
+var element = $('#{{ div_id }}');
 </script>
 <script type="{{ datatype }}">
 {{ output.data[datatype] | json_dumps }}
