--- a/share/jupyter/nbconvert/templates/lab/base.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/base.html.j2
@@ -226,7 +226,7 @@ class="unconfined"
 <div id="{{ div_id }}"></div>
 <div class="jp-RenderedJavaScript jp-OutputArea-output {{ extra_class }}" data-mime-type="application/javascript">
 <script type="text/javascript">
-var element_id = '#{{ div_id }}';
+var element = document.getElementById('{{ div_id }}');
 {{ output.data['application/javascript'] }}
 </script>
 </div>
@@ -239,7 +239,7 @@ var element_id = '#{{ div_id }}';
 <div id="{{ div_id }}"></div>
 <div class="output_subarea output_widget_state {{ extra_class }}">
 <script type="text/javascript">
-var element_id = '#{{ div_id }}';
+var element = document.getElementById('{{ div_id }}');
 </script>
 <script type="{{ datatype }}">
 {{ output.data[datatype] | json_dumps }}
@@ -254,7 +254,7 @@ var element_id = '#{{ div_id }}';
 <div id="{{ div_id }}"></div>
 <div class="jupyter-widgets jp-OutputArea-output {{ extra_class }}">
 <script type="text/javascript">
-var element_id = '#{{ div_id }}';
+var element = document.getElementById('{{ div_id }}');
 </script>
 <script type="{{ datatype }}">
 {{ output.data[datatype] | json_dumps }}
