fix: use the same DOM element as in a live notebook for element variable

--- a/share/jupyter/nbconvert/templates/lab/base.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/base.html.j2
@@ -223,8 +223,7 @@ class="unconfined"
 
 {% set div_id = uuid4() %}
 {%- block data_javascript scoped %}
-<div id="{{ div_id }}"></div>
-<div class="jp-RenderedJavaScript jp-OutputArea-output {{ extra_class }}" data-mime-type="application/javascript">
+<div id="{{ div_id }}" class="jp-RenderedJavaScript jp-OutputArea-output {{ extra_class }}" data-mime-type="application/javascript">
 <script type="text/javascript">
 var element = document.getElementById('{{ div_id }}');
 {{ output.data['application/javascript'] }}
@@ -236,8 +235,7 @@ var element = document.getElementById('{{ div_id }}');
 {% set div_id = uuid4() %}
 {% set datatype_list = output.data | filter_data_type %}
 {% set datatype = datatype_list[0]%}
-<div id="{{ div_id }}"></div>
-<div class="output_subarea output_widget_state {{ extra_class }}">
+<div id="{{ div_id }}" class="output_subarea output_widget_state {{ extra_class }}">
 <script type="text/javascript">
 var element = document.getElementById('{{ div_id }}');
 </script>
@@ -251,8 +249,7 @@ var element = document.getElementById('{{ div_id }}');
 {% set div_id = uuid4() %}
 {% set datatype_list = output.data | filter_data_type %}
 {% set datatype = datatype_list[0]%}
-<div id="{{ div_id }}"></div>
-<div class="jupyter-widgets jp-OutputArea-output {{ extra_class }}">
+<div id="{{ div_id }}" class="jupyter-widgets jp-OutputArea-output {{ extra_class }}">
 <script type="text/javascript">
 var element = document.getElementById('{{ div_id }}');
 </script>
