fix error in docstring => latex/pdf export by converting ansi escapes

--- a/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2
+++ b/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2
@@ -6,9 +6,9 @@
 
 % Displaying simple data text
 ((* block data_text *))
-    \begin{verbatim}
-((( output.data['text/plain'] )))
-    \end{verbatim}
+    \begin{Verbatim}[commandchars=\\\{\}]
+((( output.data['text/plain'] | escape_latex | ansi2latex )))
+    \end{Verbatim}
 ((* endblock data_text *))
 
 % Display python error text as-is
