--- a/share/jupyter/nbconvert/templates/classic/index.html.j2
+++ b/share/jupyter/nbconvert/templates/classic/index.html.j2
@@ -13,10 +13,10 @@
 
 {%- block html_head_js -%}
 {%- block html_head_js_jquery -%}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="{{ resources.jquery_url }}"></script>
 {%- endblock html_head_js_jquery -%}
 {%- block html_head_js_requirejs -%}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<script src="{{ resources.require_js_url }}"></script>
 {%- endblock html_head_js_requirejs -%}
 {%- endblock html_head_js -%}
 
