--- a/share/jupyter/nbconvert/templates/classic/index.html.j2
+++ b/share/jupyter/nbconvert/templates/classic/index.html.j2
@@ -1,6 +1,6 @@
 {%- extends 'base.html.j2' -%}
 {% from 'mathjax.html.j2' import mathjax %}
-
+{% from 'jupyter_widgets.html.j2' import jupyter_widgets %}
 
 {%- block header -%}
 <!DOCTYPE html>
@@ -21,32 +21,9 @@
 {%- endblock html_head_js -%}
 
 {% block jupyter_widgets %}
-{%- if "widgets" in nb.metadata -%}
-<script>
-(function() {
-  function addWidgetsRenderer() {
-    var mimeElement = document.querySelector('script[type="application/vnd.jupyter.widget-view+json"]');
-    var scriptElement = document.createElement('script');
-    var widgetRendererSrc = '{{ resources.jupyter_widgets_base_url }}@jupyter-widgets/html-manager@*/dist/embed-amd.js';
-    var widgetState;
-
-    // Fallback for older version:
-    try {
-      widgetState = mimeElement && JSON.parse(mimeElement.innerHTML);
-
-      if (widgetState && (widgetState.version_major < 2 || !widgetState.version_major)) {
-        widgetRendererSrc = '{{ resources.jupyter_widgets_base_url }}jupyter-js-widgets@*/dist/embed.js';
-      }
-    } catch(e) {}
-
-    scriptElement.src = widgetRendererSrc;
-    document.body.appendChild(scriptElement);
-  }
-
-  document.addEventListener('DOMContentLoaded', addWidgetsRenderer);
-}());
-</script>
-{%- endif -%}
+  {%- if "widgets" in nb.metadata -%}
+    {{ jupyter_widgets(resources.jupyter_widgets_base_url) }}
+  {%- endif -%}
 {% endblock jupyter_widgets %}
 
 {% block extra_css %}
@@ -57,7 +34,6 @@
     {{ css }}
     </style>
 {% endfor %}
-
 
 {% block notebook_css %}
 {{ resources.include_css("static/style.css") }}
@@ -96,15 +72,12 @@ div#notebook-container{
 </style>
 {% endblock notebook_css %}
 
-
 <!-- Custom stylesheet, it must be in the same directory as the html file -->
 {% block custom_css %}
 <link rel="stylesheet" href="custom.css">
 {% endblock custom_css %}
 
-<!-- Loading mathjax macro -->
 {{ mathjax() }}
-
 
 {%- block html_head_css -%}
 {%- endblock html_head_css -%}
@@ -113,7 +86,6 @@ div#notebook-container{
 </head>
 {%- endblock header -%}
 
-{# using the body block like this makes is difficult to be composable, added body_content/body_cells block for that#}
 {% block body_header %}
 <body>
   <div tabindex="-1" id="notebook" class="border-box-sizing">
@@ -132,3 +104,4 @@ div#notebook-container{
 {{ super() }}
 </html>
 {% endblock footer %}
+
