--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -1,5 +1,6 @@
 {%- extends 'base.html.j2' -%}
 {% from 'mathjax.html.j2' import mathjax %}
+{% from 'jupyter_widgets.html.j2' import jupyter_widgets %}
 
 {%- block header -%}
 <!DOCTYPE html>
@@ -17,32 +18,9 @@
 {%- endblock html_head_js -%}
 
 {% block jupyter_widgets %}
-{%- if "widgets" in nb.metadata -%}
-<script>
-(function() {
-  function addWidgetsRenderer() {
-    var mimeElement = document.querySelector('script[type="application/vnd.jupyter.widget-view+json"]');
-    var scriptElement = document.createElement('script');
-    var widgetRendererSrc = '{{ resources.jupyter_widgets_base_url }}@jupyter-widgets/html-manager@*/dist/embed-amd.js';
-    var widgetState;
-
-    // Fallback for older version:
-    try {
-      widgetState = mimeElement && JSON.parse(mimeElement.innerHTML);
-
-      if (widgetState && (widgetState.version_major < 2 || !widgetState.version_major)) {
-        widgetRendererSrc = '{{ resources.jupyter_widgets_base_url }}jupyter-js-widgets@*/dist/embed.js';
-      }
-    } catch(e) {}
-
-    scriptElement.src = widgetRendererSrc;
-    document.body.appendChild(scriptElement);
-  }
-
-  document.addEventListener('DOMContentLoaded', addWidgetsRenderer);
-}());
-</script>
-{%- endif -%}
+  {%- if "widgets" in nb.metadata -%}
+    {{ jupyter_widgets(resources.jupyter_widgets_base_url) }}
+  {%- endif -%}
 {% endblock jupyter_widgets %}
 
 {% block extra_css %}
@@ -71,7 +49,6 @@ a.anchor-link {
 </style>
 {% endblock notebook_css %}
 
-<!-- Loading mathjax macro -->
 {{ mathjax() }}
 
 {%- block html_head_css -%}
@@ -81,7 +58,6 @@ a.anchor-link {
 </head>
 {%- endblock header -%}
 
-{# using the body block like this makes is difficult to be composable, added body_content/body_cells block for that#}
 {%- block body_header -%}
 {% if resources.theme == 'dark' %}
 <body class="jp-Notebook" data-jp-theme-light="false" data-jp-theme-name="JupyterLab Dark">
