--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -19,7 +19,7 @@
 
 {% block jupyter_widgets %}
   {%- if "widgets" in nb.metadata -%}
-    {{ jupyter_widgets(resources.jupyter_widgets_base_url) }}
+    {{ jupyter_widgets(resources.jupyter_widgets_base_url, resources.html_manager_semver_range) }}
   {%- endif -%}
 {% endblock jupyter_widgets %}
 
@@ -27,9 +27,9 @@
 {% endblock extra_css %}
 
 {% for css in resources.inlining.css -%}
-    <style type="text/css">
+  <style type="text/css">
     {{ css }}
-    </style>
+  </style>
 {% endfor %}
 
 {% block notebook_css %}
