Changed preprocessor to processor. Rebuilt the docs

--- a/share/jupyter/nbconvert/templates/latex/base.tex.j2
+++ b/share/jupyter/nbconvert/templates/latex/base.tex.j2
@@ -148,6 +148,8 @@ override this.-=))
     \newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.40,0.40,0.40}{{#1}}}
     \newcommand{\BuiltInTok}[1]{{#1}}
     \newcommand{\ExtensionTok}[1]{{#1}}
+    \newcommand{\ProcessorTok}[1]{\textcolor[rgb]{0.74,0.48,0.00}{{#1}}}
+    % Backwards compatability
     \newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.74,0.48,0.00}{{#1}}}
     \newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.49,0.56,0.16}{{#1}}}
     \newcommand{\InformationTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{{#1}}}}}
