Review structure of reveal template

--- a/share/jupyter/nbconvert/templates/reveal/index.html.j2
+++ b/share/jupyter/nbconvert/templates/reveal/index.html.j2
@@ -1,5 +1,6 @@
-{%- extends 'lab/index.html.j2' -%}
+{%- extends 'base.html.j2' -%}
 {% from 'mathjax.html.j2' import mathjax %}
+{% from 'jupyter_widgets.html.j2' import jupyter_widgets %}
 
 {% set reveal_url_prefix = resources.reveal.url_prefix | default('https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0', true) %}
 {% set reveal_theme = resources.reveal.theme | default('white', true) %}
@@ -7,43 +8,12 @@
 {% set reveal_transition = resources.reveal.transition | default('slide', true) %}
 {% set reveal_scroll = resources.reveal.scroll | default(false, true) | json_dumps %}
 
-{%- block any_cell scoped -%}
-{%- if cell.metadata.get('slide_start', False) -%}
-<section>
-{%- endif -%}
-{%- if cell.metadata.get('subslide_start', False) -%}
-<section>
-{%- endif -%}
-{%- if cell.metadata.get('fragment_start', False) -%}
-<div class="fragment">
-{%- endif -%}
-
-{%- if cell.metadata.slide_type == 'notes' -%}
-<aside class="notes">
-{{ super() }}
-</aside>
-{%- elif cell.metadata.slide_type == 'skip' -%}
-{%- else -%}
-{{ super() }}
-{%- endif -%}
-
-{%- if cell.metadata.get('fragment_end', False) -%}
-</div>
-{%- endif -%}
-{%- if cell.metadata.get('subslide_end', False) -%}
-</section>
-{%- endif -%}
-{%- if cell.metadata.get('slide_end', False) -%}
-</section>
-{%- endif -%}
-
-{%- endblock any_cell -%}
-
-{% block header %}
+{%- block header -%}
 <!DOCTYPE html>
 <html>
 <head>
 
+{%- block html_head -%}
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
 
@@ -54,16 +24,19 @@
 <title>{{nb_title}} slides</title>
 
 {%- block html_head_js -%}
-{{ super() }}
+{%- block html_head_js_jquery -%}
+<script src="{{ resources.jquery_url }}"></script>
+{%- endblock html_head_js_jquery -%}
+{%- block html_head_js_requirejs -%}
+<script src="{{ resources.require_js_url }}"></script>
+{%- endblock html_head_js_requirejs -%}
 {%- endblock html_head_js -%}
 
-
 {% block jupyter_widgets %}
-{{ super() }}
+  {%- if "widgets" in nb.metadata -%}
+    {{ jupyter_widgets(resources.jupyter_widgets_base_url, resources.html_manager_semver_range) }}
+  {%- endif -%}
 {% endblock jupyter_widgets %}
-
-<script src="{{resources.reveal.require_js_url}}"></script>
-<script src="{{resources.reveal.jquery_url}}"></script>
 
 <!-- General and theme style sheets -->
 <link rel="stylesheet" href="{{ reveal_url_prefix }}/css/reveal.css">
@@ -78,7 +51,6 @@ if( window.location.search.match( /print-pdf/gi ) ) {
         link.href = '{{ reveal_url_prefix }}/css/print/pdf.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
 }
-
 </script>
 
 <!--[if lt IE 9]>
@@ -98,146 +70,42 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 {% endfor %}
 
 {% block notebook_css %}
-{{ super() }}
-{% endblock notebook_css %}
-
-
+{{ resources.include_css("static/index.css") }}
+{% if resources.theme == 'dark' %}
+    {{ resources.include_css("static/theme-dark.css") }}
+{% else %}
+    {{ resources.include_css("static/theme-light.css") }}
+{% endif %}
 <style type="text/css">
-/* Overrides of notebook CSS for static HTML export */
-.reveal {
-  font-size: 160%;
-}
-.reveal pre {
-  width: inherit;
-  padding: 0.4em;
-  margin: 0px;
-  font-family: monospace, sans-serif;
-  font-size: 80%;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
-}
-.reveal pre code {
-  padding: 0px;
-}
-.reveal section img {
-  border: 0px solid black;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0);
-}
-.reveal i {
-  font-style: normal;
-  font-family: FontAwesome;
-  font-size: 2em;
-}
-.reveal .slides {
-  text-align: left;
-}
-.reveal.fade {
-  opacity: 1;
-}
-.reveal .progress {
-  position: static;
-}
-.reveal .controls .navigate-left,
-.reveal .controls .navigate-left.enabled {
-  border-right-color: #727272;
-}
-.reveal .controls .navigate-left.enabled:hover,
-.reveal .controls .navigate-left.enabled.enabled:hover {
-  border-right-color: #dfdfdf;
-}
-.reveal .controls .navigate-right,
-.reveal .controls .navigate-right.enabled {
-  border-left-color: #727272;
-}
-.reveal .controls .navigate-right.enabled:hover,
-.reveal .controls .navigate-right.enabled.enabled:hover {
-  border-left-color: #dfdfdf;
-}
-.reveal .controls .navigate-up,
-.reveal .controls .navigate-up.enabled {
-  border-bottom-color: #727272;
-}
-.reveal .controls .navigate-up.enabled:hover,
-.reveal .controls .navigate-up.enabled.enabled:hover {
-  border-bottom-color: #dfdfdf;
-}
-.reveal .controls .navigate-down,
-.reveal .controls .navigate-down.enabled {
-  border-top-color: #727272;
-}
-.reveal .controls .navigate-down.enabled:hover,
-.reveal .controls .navigate-down.enabled.enabled:hover {
-  border-top-color: #dfdfdf;
-}
-.reveal .progress span {
-  background: #727272;
-}
-div.input_area {
-  padding: 0.06em;
-}
-div.code_cell {
-  background-color: transparent;
-}
-div.prompt {
-  width: 11ex;
-  padding: 0.4em;
-  margin: 0px;
-  font-family: monospace, sans-serif;
-  font-size: 80%;
-  text-align: right;
-}
-div.output_area pre {
-  font-family: monospace, sans-serif;
-  font-size: 80%;
-}
-div.output_prompt {
-  /* 5px right shift to account for margin in parent container */
-  margin: 5px 5px 0 0;
-}
-div.text_cell.rendered .rendered_html {
-  /* The H1 height seems miscalculated, we are just hidding the scrollbar */
-  overflow-y: hidden;
-}
 a.anchor-link {
-  /* There is still an anchor, we are only hidding it */
-  display: none;
+   display: none;
 }
-.rendered_html p {
-  text-align: inherit;
-}
-::-webkit-scrollbar
-{
-  width: 6px;
-  height: 6px;
-}
-::-webkit-scrollbar *
-{
-  background:transparent;
-}
-::-webkit-scrollbar-thumb
-{
-  background: #727272 !important;
+.highlight  {
+    margin: 0.4em;
 }
 </style>
 
-<!-- Custom stylesheet, it must be in the same directory as the html file -->
-<link rel="stylesheet" href="custom.css">
+{{ resources.include_css("static/custom_reveal.css") }}
 
+{% endblock notebook_css %}
+{%- endblock html_head -%}
 </head>
 {% endblock header%}
 
-{% block body %}
-{% block pre_slides %}
-<body>
-{% endblock pre_slides %}
-
+{%- block body_header -%}
+{% if resources.theme == 'dark' %}
+<body class="jp-Notebook" data-jp-theme-light="false" data-jp-theme-name="JupyterLab Dark">
+{% else %}
+<body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
+{% endif %}
 <div class="reveal">
 <div class="slides">
-{{ super() }}
-</div>
-</div>
-{% block post_slides %}
-<script>
+{%- endblock body_header -%}
 
+{% block body_footer %}
+</div>
+</div>
+<script>
 require(
     {
       // it makes sense to wait a little bit when you are loading
@@ -300,8 +168,7 @@ require(
 </script>
 
 </body>
-{% endblock post_slides %}
-{% endblock body %}
+{% endblock body_footer %}
 
 {% block footer %}
 </html>
