Scale up fonts in presentation mode

--- a/share/jupyter/nbconvert/templates/reveal/index.html.j2
+++ b/share/jupyter/nbconvert/templates/reveal/index.html.j2
@@ -77,6 +77,12 @@ a.anchor-link {
 .jp-Notebook {
     padding: 0;
 }
+:root {
+    --jp-ui-font-size1: 20px;       /* instead of 14px */
+    --jp-content-font-size1: 20px;  /* instead of 14px */
+    --jp-code-font-size: 19px;      /* instead of 13px */
+    --jp-cell-prompt-width: 110px;  /* instead of 64px */
+}
 </style>
 
 {{ resources.include_css("static/custom_reveal.css") }}
