--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -47,7 +47,13 @@ a.anchor-link {
 .highlight  {
     margin: 0.4em;
 }
+@media print {
+  body {
+    margin: 0;
+  }
+}
 </style>
+
 {% endblock notebook_css %}
 
 {{ mathjax() }}
