--- a/share/jupyter/nbconvert/templates/reveal/index.html.j2
+++ b/share/jupyter/nbconvert/templates/reveal/index.html.j2
@@ -83,6 +83,11 @@ a.anchor-link {
     --jp-code-font-size: 19px;      /* instead of 13px */
     --jp-cell-prompt-width: 110px;  /* instead of 64px */
 }
+@media print {
+  body {
+    margin: 0;
+  }
+}
 </style>
 
 {{ resources.include_css("static/custom_reveal.css") }}
