Minor CSS fix to the lab template

--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -47,6 +47,12 @@ a.anchor-link {
 .highlight  {
     margin: 0.4em;
 }
+.jp-InputArea.jp-Cell-inputArea {
+    overflow: hidden;
+}
+.jp-Editor.jp-InputArea-editor {
+    overflow: hidden;
+}
 @media print {
   body {
     margin: 0;
