--- a/share/jupyter/nbconvert/templates/base/null.j2
+++ b/share/jupyter/nbconvert/templates/base/null.j2
@@ -9,16 +9,16 @@ To layout the different blocks of a notebook.
 
 Subtemplates can override blocks to define their custom representation.
 
-If one of the block you do overwrite is not a leave block, consider
+If one of the block you do overwrite is not a leaf block, consider
 calling super.
 
-{%- block nonLeaveBlock -%}
+{%- block nonLeafBlock -%}
     #add stuff at beginning
     {{ super() }}
     #add stuff at end
-{%- endblock nonLeaveBlock -%}
+{%- endblock nonLeafBlock -%}
 
-consider calling super even if it is a leave block, we might insert more blocks later.
+consider calling super even if it is a leaf block, we might insert more blocks later.
 
 #}
 {%- block header -%}
