Feature: add speaker notes to Reveal.js template
Reference in https://revealjs.com/plugins/#built-in-plugins

--- a/share/jupyter/nbconvert/templates/reveal/index.html.j2
+++ b/share/jupyter/nbconvert/templates/reveal/index.html.j2
@@ -123,16 +123,18 @@ require(
       waitSeconds: 15
     },
     [
-      "{{ reveal_url_prefix }}/dist/reveal.js"
+      "{{ reveal_url_prefix }}/dist/reveal.js",
+      "{{ reveal_url_prefix }}/plugin/notes/notes.js"
     ],
 
-    function(Reveal){
+    function(Reveal, RevealNotes){
         // Full list of configuration options available here: https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
             controls: true,
             progress: true,
             history: true,
             transition: "{{reveal_transition}}",
+            plugins: [RevealNotes]
         });
 
         var update = function(event){
