--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -66,7 +66,9 @@ a.anchor-link {
 
 {% endblock notebook_css %}
 
+{%- block html_head_js_mathjax -%}
 {{ mathjax() }}
+{%- endblock html_head_js_mathjax -%}
 
 {%- block html_head_css -%}
 {%- endblock html_head_css -%}
