Fix mathjax macro

--- a/share/jupyter/nbconvert/templates/reveal/index.html.j2
+++ b/share/jupyter/nbconvert/templates/reveal/index.html.j2
@@ -52,7 +52,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 </script>
 
 <!-- Loading the mathjax macro -->
-{{ mathjax() }}
+{{ mathjax(resources.mathjax_tex_url, resources.mathjax_safe_url) }}
 
 {% for css in resources.inlining.css -%}
   <style type="text/css">
