--- a/share/jupyter/nbconvert/templates/base/mathjax.html.j2
+++ b/share/jupyter/nbconvert/templates/base/mathjax.html.j2
@@ -1,40 +1,43 @@
-<!-- Load mathjax -->
-<script src="{{ resources.mathjax_tex_url }}"></script>
-<script src="{{ resources.mathjax_safe_url }}"></script>
-<!-- MathJax configuration -->
-<script type="text/x-mathjax-config">
-init_mathjax = function() {
-    if (window.MathJax) {
-    // MathJax loaded
-        MathJax.Hub.Config({
-            TeX: {
-                equationNumbers: {
-                autoNumber: "AMS",
-                useLabelIds: true
+
+{%- macro mathjax(mathjax_tex_url, mathjax_safe_url) -%}
+    <!-- Load mathjax -->
+    <script src="{{ mathjax_tex_url }}"></script>
+    <script src="{{ mathjax_safe_url }}"></script>
+    <!-- MathJax configuration -->
+    <script type="text/x-mathjax-config">
+    init_mathjax = function() {
+        if (window.MathJax) {
+        // MathJax loaded
+            MathJax.Hub.Config({
+                TeX: {
+                    equationNumbers: {
+                    autoNumber: "AMS",
+                    useLabelIds: true
+                    }
+                },
+                tex2jax: {
+                    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+                    displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+                    processEscapes: true,
+                    processEnvironments: true
+                },
+                displayAlign: 'center',
+                CommonHTML: {
+                    linebreaks: { 
+                    automatic: true 
+                    }
+                },
+                "HTML-CSS": {
+                    linebreaks: { 
+                    automatic: true 
+                    }
                 }
-            },
-            tex2jax: {
-                inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-                displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-                processEscapes: true,
-                processEnvironments: true
-            },
-            displayAlign: 'center',
-            CommonHTML: {
-                linebreaks: { 
-                automatic: true 
-                }
-            },
-            "HTML-CSS": {
-                linebreaks: { 
-                automatic: true 
-                }
-            }
-        });
-    
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
+            });
+        
+            MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
+        }
     }
-}
-init_mathjax();
-</script>
-<!-- End of mathjax configuration -->
+    init_mathjax();
+    </script>
+    <!-- End of mathjax configuration -->
+{%- endmacro %}
