--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -67,7 +67,7 @@ a.anchor-link {
 {% endblock notebook_css %}
 
 {%- block html_head_js_mathjax -%}
-{{ mathjax() }}
+{{ mathjax(resources.mathjax_tex_url, resources.mathjax_safe_url) }}
 {%- endblock html_head_js_mathjax -%}
 
 {%- block html_head_css -%}
