Add the ability to cutomize the full widget URL

--- a/share/jupyter/nbconvert/templates/base/jupyter_widgets.html.j2
+++ b/share/jupyter/nbconvert/templates/base/jupyter_widgets.html.j2
@@ -1,11 +1,15 @@
-{%- macro jupyter_widgets(widgets_cdn_url, html_manager_semver_range) -%}
+{%- macro jupyter_widgets(widgets_cdn_url, html_manager_semver_range, widgets_url) -%}
 
 <script>
 (function() {
   function addWidgetsRenderer() {
     var mimeElement = document.querySelector('script[type="application/vnd.jupyter.widget-view+json"]');
     var scriptElement = document.createElement('script');
+    {% if widgets_url %}   
+    var widgetRendererSrc = '{{ widgets_url }}embed-amd.js';
+    {% else %}
     var widgetRendererSrc = '{{ widgets_cdn_url }}@jupyter-widgets/html-manager@{{ html_manager_semver_range }}/dist/embed-amd.js';
+    {%endif %}
     var widgetState;
 
     // Fallback for older version:
@@ -13,7 +17,11 @@
       widgetState = mimeElement && JSON.parse(mimeElement.innerHTML);
 
       if (widgetState && (widgetState.version_major < 2 || !widgetState.version_major)) {
-        widgetRendererSrc = '{{ widgets_cdn_url }}jupyter-js-widgets@*/dist/embed.js';
+        {% if widgets_url %}   
+        var widgetRendererSrc = '{{ widgets_url }}embed.js';
+        {% else %}
+        var widgetRendererSrc = '{{ widgets_cdn_url }}@jupyter-js-widgets@*/dist/embed.js';
+        {%endif %}
       }
     } catch(e) {}
 
