--- a/share/jupyter/nbconvert/templates/classic/index.html.j2
+++ b/share/jupyter/nbconvert/templates/classic/index.html.j2
@@ -74,7 +74,7 @@ div#notebook-container{
 {% endblock notebook_css %}
 
 {%- block html_head_js_mathjax -%}
-{{ mathjax(resources.mathjax_tex_url, resources.mathjax_safe_url) }}
+{{ mathjax(resources.mathjax_url) }}
 {%- endblock html_head_js_mathjax -%}
 
 {%- block html_head_css -%}
