Revert "Add the ability to cutomize the full widget URL"
This reverts commit 14e8f6d9f75e6a29cd745b53c5b90af18309efcb.

--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -20,7 +20,7 @@
 
 {% block jupyter_widgets %}
   {%- if "widgets" in nb.metadata -%}
-    {{ jupyter_widgets(resources.jupyter_widgets_base_url, resources.html_manager_semver_range, resources.widgets_url) }}
+    {{ jupyter_widgets(resources.jupyter_widgets_base_url, resources.html_manager_semver_range) }}
   {%- endif -%}
 {% endblock jupyter_widgets %}
 
@@ -95,3 +95,4 @@ a.anchor-link {
 {{ super() }}
 </html>
 {% endblock footer %}
+
