Add Mathjax url argument where it's missing

--- a/docs/api_examples/template_path/project_templates/nbconvert/templates/classic_clone/index.html.j2
+++ b/docs/api_examples/template_path/project_templates/nbconvert/templates/classic_clone/index.html.j2
@@ -103,7 +103,7 @@ div#notebook-container{
 {% endblock custom_css %}
 
 <!-- Loading mathjax macro -->
-{{ mathjax() }}
+{{ mathjax(resources.mathjax_url) }}
 
 
 {%- block html_head_css -%}
