--- a/share/jupyter/nbconvert/templates/reveal/index.html.j2
+++ b/share/jupyter/nbconvert/templates/reveal/index.html.j2
@@ -92,7 +92,7 @@ a.anchor-link {
 {% endblock notebook_css %}
 
 {%- block html_head_js_mathjax -%}
-{{ mathjax() }}
+{{ mathjax(resources.mathjax_url) }}
 {%- endblock html_head_js_mathjax -%}
 
 {%- block html_head_css -%}
