Add default for widgets_url

--- a/share/jupyter/nbconvert/templates/base/jupyter_widgets.html.j2
+++ b/share/jupyter/nbconvert/templates/base/jupyter_widgets.html.j2
@@ -1,4 +1,4 @@
-{%- macro jupyter_widgets(widgets_cdn_url, html_manager_semver_range, widgets_url) -%}
+{%- macro jupyter_widgets(widgets_cdn_url, html_manager_semver_range, widgets_url='') -%}
 
 <script>
 (function() {
