Allow users to customize mathjax URLs (#1609)
* Customize mathjax urls

* Fix typos

* Fix mathjax macro

* Add the ability to cutomize the full widget URL

* Replace mathjax urls with a single one

* Add back mathjax default url at the level of the jinja template

* Revert "Add the ability to cutomize the full widget URL"

This reverts commit 14e8f6d9f75e6a29cd745b53c5b90af18309efcb.

* Formatting

* Remove Mathjax macro where not needed

* Add Mathjax url argument where it's missing

Co-authored-by: David Brochart <david.brochart@gmail.com>

--- a/share/jupyter/nbconvert/templates/classic/index.html.j2
+++ b/share/jupyter/nbconvert/templates/classic/index.html.j2
@@ -74,7 +74,7 @@ div#notebook-container{
 {% endblock notebook_css %}
 
 {%- block html_head_js_mathjax -%}
-{{ mathjax() }}
+{{ mathjax(resources.mathjax_url) }}
 {%- endblock html_head_js_mathjax -%}
 
 {%- block html_head_css -%}
