write SVG data as base64 instead of applying html_clean

--- a/share/templates/lab/base.html.j2
+++ b/share/templates/lab/base.html.j2
@@ -164,7 +164,7 @@ unknown type  {{ cell.type }}
 {%- if output.svg_filename %}
 <img src="{{ output.svg_filename | posix_path | escape_html }}">
 {%- else %}
-{{ output.data['image/svg+xml'].encode("utf-8") | clean_html }}
+<img src="data:image/svg+xml;base64,{{ output.data['image/svg+xml'] | text_base64 | escape_html }}">
 {%- endif %}
 </div>
 {%- endblock data_svg %}
