Add main landmark

--- a/share/templates/lab/index.html.j2
+++ b/share/templates/lab/index.html.j2
@@ -125,9 +125,11 @@ a.anchor-link {
 {% else %}
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 {% endif %}
+<main>
 {%- endblock body_header -%}
 
 {% block body_footer %}
+</main>
 </body>
 {% endblock body_footer %}
 
