--- a/share/templates/classic/index.html.j2
+++ b/share/templates/classic/index.html.j2
@@ -92,13 +92,15 @@ div#notebook-container{
 
 {% block body_header %}
 <body>
-  <div tabindex="-1" id="notebook" class="border-box-sizing">
-    <div class="container" id="notebook-container">
+  <main>
+    <div tabindex="-1" id="notebook" class="border-box-sizing">
+      <div class="container" id="notebook-container">
 {% endblock body_header %}
 
 {% block body_footer %}
+      </div>
     </div>
-  </div>
+  </main>
 </body>
 {% endblock body_footer %}
 
