Add html lang attribute (default to 'en')

--- a/share/templates/classic/index.html.j2
+++ b/share/templates/classic/index.html.j2
@@ -4,7 +4,7 @@
 
 {%- block header -%}
 <!DOCTYPE html>
-<html>
+<html lang="{{ resources.language_code }}">
 <head>
 {%- block html_head -%}
 <meta charset="utf-8" />
