--- a/share/templates/lab/index.html.j2
+++ b/share/templates/lab/index.html.j2
@@ -5,7 +5,7 @@
 
 {%- block header -%}
 <!DOCTYPE html>
-<html>
+<html lang="{{ resources.language_code }}">
 <head>
 {%- block html_head -%}
 <meta charset="utf-8" />
