--- a/share/templates/reveal/static/custom_reveal.css
+++ b/share/templates/reveal/static/custom_reveal.css
@@ -23,6 +23,7 @@
 .reveal .slides {
   text-align: left;
 }
+
 .reveal.fade {
   opacity: 1;
 }
@@ -105,6 +106,30 @@ main {
 }
 .reveal .progress span {
   background: #727272;
+}
+
+.reveal #rise-header {
+  position: absolute; top: 0;
+}
+
+.reveal #rise-header a {
+  z-index: 1;
+}
+
+.reveal #rise-backimage {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.reveal #rise-footer {
+  position: absolute; bottom: 0;
+}
+
+.reveal #rise-footer a {
+  z-index: 1;
 }
 
 /* Scrollbars */
